Fix z-index of .i-dropdown elements

--- a/indico/web/client/styles/partials/_toolbars.scss
+++ b/indico/web/client/styles/partials/_toolbars.scss
@@ -268,7 +268,7 @@ $toolbar-spacing: 10px;
   }
 
   .i-dropdown {
-    z-index: 1;
+    z-index: 3;
 
     & > li {
       white-space: nowrap;
